--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -71,22 +73,21 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
-    // kotlin corountines
+// kotlin corountines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
     configurations {
         compile.exclude group: 'org.jetbrains.kotlinx', module: 'atomicfu-common'
     }
 
-    // live data + view model
+// live data + view model
     kapt 'androidx.lifecycle:lifecycle-compiler:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
-
-    // Koin for the dependencies injections
+// Koin for the dependencies injections
     implementation 'org.koin:koin-android:2.0.0-rc-2'
     implementation 'org.koin:koin-androidx-viewmodel:2.0.0-rc-2'
     implementation 'org.koin:koin-androidx-scope:2.0.0-rc-2'
