--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
-    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    //implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
 
     // Glide
