--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,11 +52,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
-
-    //implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
 
     // Glide
@@ -109,8 +104,14 @@ dependencies {
 
     //for unit testing
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.json:json:20180813'
     testImplementation "org.mockito:mockito-core:3.3.3"
+
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation "android.arch.core:core-testing:1.1.0"
-    testImplementation 'org.json:json:20180813'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation "com.google.truth:truth:1.0.1"
+
+
 }
